super omage file change thanks kimberly ;)

--- a/bestel.html
+++ b/bestel.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Css/bestel.css">
-    <script src="./AssetsBootstrap/jquery-3.5.1.min.js"></script>
-    <script src="./AssetsBootstrap/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="./AssetsBootstrap/bootstrap.min.css">
-    <script defer src="./Js/bestel.js"></script>
+    <link rel="stylesheet" href="./scss/bestel.css">
+    <script src="./assets_bootstrap/jquery-3.5.1.min.js"></script>
+    <script src="./assets_bootstrap/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="./assets_bootstrap/bootstrap.min.css">
+    <script defer src="./js/bestel.js"></script>
     <link rel="stylesheet" href="./Css/login.css">
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <link rel="stylesheet" href="https://use.typekit.net/wpi2keu.css">
@@ -29,10 +29,10 @@
                             <a class="nav-link" href="#">Product </a>
                         </li>
                         <li class="nav-item align-self-center">
-                            <a class="nav-link px-md-4 active" href="./bestel.html">Bestel<span class="sr-only"></span></a>
+                            <a class="nav-link px-md-4" href="./bestel.html">Bestel</a>
                         </li>
                         <li class="nav-item align-self-center">
-                            <a class="nav-link px-md-4" href="./overOns.html">Over ons</a>
+                            <a class="nav-link px-md-4" href="./overons.html">Over ons<span class="sr-only"></span></a>
                         </li>
                         <li class="nav-item align-self-center">
                             <a class="nav-link px-md-4" href="./contact.html">Contact</a>
@@ -46,7 +46,7 @@
                             </a>
                         </li>
                         <li class="nav-item align-self-center">
-                            <a class="nav-link pr-md-4 active" href="./logIn.html">
+                            <a class="nav-link pr-md-4" id="naam" href="./login.html">
                                 <ion-icon class="" name="person-outline"></ion-icon>
                             </a>
                         </li>
@@ -57,7 +57,7 @@
             <main class="main container pt-5">
                 <div class="row">
                     <div class="col-lg-7 d-flex justify-content-center align-items-center">
-                        <img class="main-container-col1-img"src="./Images/BandRoodPingGroen.png">
+                        <img class="main-container-col1-img"src="./images/BandRoodPingGroen.png">
                     </div>
                     <div class="col">
                         <p>Prijs</p>
@@ -66,7 +66,7 @@
                         <span class="dot-y"></span>
                         <span class="dot-b"></span>
                         <hr>
-                        <img class="main-container-col2-truck"src="./Images/Truck.png">
+                        <img class="main-container-col2-truck"src="./images/Truck.png">
                         <p>Standaard levering</p>
                         <p>2-3 werkdagen</p>
                         <p class="main-container-col2-gratis">Gratis</p>
@@ -90,7 +90,49 @@
                     </div>
                 </div>
             </main>
-            
-
+            <!--FOOTER-->
+            <footer class="row p-md-5 pt-4">
+                <div class="col-md-4 d-flex justify-content-center align-items-center column1-footer">
+                    <div class="column1-footer-links d-flex flex-column">
+                        <a class="pb-2" href="./index.html">Home</a>
+                        <a class="pb-2" href="./product.html">Product</a>
+                        <a class="pb-2" href="./overons.html">Over ons</a>
+                        <a href="./contact.html">Contact</a>
+                    </div>
+                </div>
+                <div class="col-md-4 d-flex flex-column align-items-center justify-content-center column2-footer">
+                    <div class="pb-2">
+                        <h2>PINGWING</h2>
+                    </div>
+                    <div class="pb-2">
+                        <a href=""><ion-icon name="logo-youtube"></ion-icon></a>
+                        <a href=""><ion-icon name="logo-linkedin"></ion-icon></a>
+                        <a href=""><ion-icon name="logo-facebook"></ion-icon></a>
+                        <a href=""><ion-icon name="logo-instagram"></ion-icon></a>
+                    </div>
+                    <div>
+                        <p>2021 &copy; PINGWING</p>
+                    </div>
+                </div>
+                <div class="col-md-4 d-flex justify-content-center align-items-center column3-footer py-4 py-md-0">
+                    <div class="column3-footer-info">
+                        <div class="info">
+                            <ion-icon name="call-outline"></ion-icon>
+                            <p>+32 123 45 789</p>
+                        </div>
+                        <div class="info pb-3">
+                            <ion-icon name="mail-outline"></ion-icon>
+                            <a href="mailto:test@test.com">Info@PingWing.be</a>
+                        </div>
+                        <div class="info">
+                            <ion-icon name="location-outline"></ion-icon>
+                            <p class="m-0">
+                                Kempische Steenweg  293<br>
+                                3500 Hasselt
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </footer>
 </body>
 </html>
