--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./AssetsBootstrap/jquery-3.5.1.min.js"></script>
-    <script src="./AssetsBootstrap/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="./AssetsBootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="./Css/contact.css">
+    <script src="./assets_bootstrap/jquery-3.5.1.min.js"></script>
+    <script src="./assets_bootstrap/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="./assets_bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="./scss/contact.css">
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <link rel="stylesheet" href="https://use.typekit.net/wpi2keu.css">
     <title>Contact</title>
@@ -28,10 +28,10 @@
                         <a class="nav-link px-md-4" href="./bestel.html">Bestel</a>
                     </li>
                     <li class="nav-item align-self-center">
-                        <a class="nav-link px-md-4" href="./overOns.html">Over ons<span class="sr-only"></span></a>
+                        <a class="nav-link px-md-4" href="./overons.html">Over ons<span class="sr-only"></span></a>
                     </li>
                     <li class="nav-item align-self-center">
-                        <a class="nav-link px-md-4 active" href="./contact.html">Contact</a>
+                        <a class="nav-link px-md-4" href="./contact.html">Contact</a>
                     </li>
                     <li class="nav-item align-self-center">
                         <a class="">|</a>
@@ -42,7 +42,7 @@
                         </a>
                     </li>
                     <li class="nav-item align-self-center">
-                        <a class="nav-link pr-md-4" href="./logIn.html">
+                        <a class="nav-link pr-md-4" id="naam" href="./login.html">
                             <ion-icon class="" name="person-outline"></ion-icon>
                         </a>
                     </li>
@@ -103,7 +103,7 @@
                 <div class="column1-footer-links d-flex flex-column">
                     <a class="pb-2" href="./index.html">Home</a>
                     <a class="pb-2" href="./product.html">Product</a>
-                    <a class="pb-2" href="./overOns.html">Over ons</a>
+                    <a class="pb-2" href="./overons.html">Over ons</a>
                     <a href="./contact.html">Contact</a>
                 </div>
             </div>
