--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./AssetsBootstrap/jquery-3.5.1.min.js"></script>
-    <script src="./AssetsBootstrap/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="./AssetsBootstrap/bootstrap.min.css">
-    <script defer src="./Js/index.js"></script>
-    <link rel="stylesheet" href="./Css/index.css">
+    <script src="./assets_bootstrap/jquery-3.5.1.min.js"></script>
+    <script src="./assets_bootstrap/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="./assets_bootstrap/bootstrap.min.css">
+    <script defer src="./js/index.js"></script>
+    <link rel="stylesheet" href="./scss/index.css">
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <link rel="stylesheet" href="https://use.typekit.net/wpi2keu.css">
     <link rel="stylesheet" href="https://use.typekit.net/wpi2keu.css">
@@ -31,7 +31,7 @@
                         <a class="nav-link px-md-4" href="./bestel.html">Bestel</a>
                     </li>
                     <li class="nav-item align-self-center">
-                        <a class="nav-link px-md-4" href="./overOns.html">Over ons<span class="sr-only"></span></a>
+                        <a class="nav-link px-md-4" href="./overons.html">Over ons<span class="sr-only"></span></a>
                     </li>
                     <li class="nav-item align-self-center">
                         <a class="nav-link px-md-4" href="./contact.html">Contact</a>
@@ -45,7 +45,7 @@
                         </a>
                     </li>
                     <li class="nav-item align-self-center">
-                        <a class="nav-link pr-md-4" id="naam" href="./logIn.html">
+                        <a class="nav-link pr-md-4" id="naam" href="./login.html">
                             <ion-icon class="" name="person-outline"></ion-icon>
                         </a>
                     </li>
@@ -397,8 +397,8 @@
                 </div>
             </div>
         </main>
-        <div class="footer image">
-            <img class="img-fluid" src="./Images/alaska.png" alt="">
+        <div class="footer-image">
+            <img class="img-fluid" src="./Images/Group 564.png" alt="">
         </div>
         <!--FOOTER-->
         <footer class="row">
@@ -406,7 +406,7 @@
                 <div class="column1-footer-links d-flex flex-column">
                     <a class="pb-4" href="./index.html">Home</a>
                     <a class="pb-4" href="./product.html">Product</a>
-                    <a class="pb-4" href="./overOns.html">Over ons</a>
+                    <a class="pb-4" href="./overons.html">Over ons</a>
                     <a href="./contact.html">Contact</a>
                 </div>
             </div>
