--- a/logIn.html
+++ b/logIn.html
@@ -58,7 +58,7 @@
         <!--Forms login en registreer-->
         <main class="container-fluid">
             <div class="row login-box">
-                <div class="col-5 login px-5 pt-5">
+                <div class="col-lg-5 login">
                     <div class="login-header pb-4">
                         <h1>Log in</h1>
                     </div>
@@ -78,38 +78,34 @@
                         <button class="btn custom-button text-white px-4" id="logIn">Log in</button>
                     </div>
                 </div>
-                <div class="col-7 registreer px-5 pt-5">
+                <div class="col-lg-7 registreer">
                     <div class="registreer-header pb-4">
                         <h1>Registreer</h1>
                     </div>
                     <div class="row registreer-input">
-                        <div class="col-6">
-                            <div class="registreer-naam pt-4">
-                                <label for="exampleInputPassword1">Naam*</label>
-                                <input type="text" class="form-control" id="naamUser">
-                            </div>
-                            <div class="registreer-email pt-4">
-                                <label for="exampleInputPassword1">Email*</label>
-                                <input type="text" class="form-control" id="mailUser">
-                            </div>
-                            <div class="registreer-straat pt-4">
-                                <label for="exampleInputPassword1">Straat</label>
-                                <input type="text" class="form-control" id="straatUser">
-                            </div>
+                        <div class="col-md-6 registreer-naam pt-4">
+                            <label for="exampleInputPassword1">Naam*</label>
+                            <input type="text" class="form-control" id="naamUser">
                         </div>
-                        <div class="col-6">
-                            <div class="registreer-telefoon pt-4">
-                                <label for="exampleInputPassword1">Telefoon</label>
-                                <input type="text" class="form-control" id="telefoonUser">
-                            </div>
-                            <div class="registreer-wachtwoord pt-4">
-                                <label for="exampleInputPassword1">Wachtwoord</label>
-                                <input type="password" class="form-control" id="wachtwoordUser">
-                            </div>
-                            <div class="registreer-stad pt-4">
-                                <label for="exampleInputPassword1">Stad</label>
-                                <input type="text" class="form-control" id="postcodeUser">
-                            </div>
+                        <div class="col-md-6 registreer-email pt-4">
+                            <label for="exampleInputPassword1">Email*</label>
+                            <input type="text" class="form-control" id="mailUser">
+                        </div>
+                        <div class="col-md-6 registreer-straat pt-4">
+                            <label for="exampleInputPassword1">Straat</label>
+                            <input type="text" class="form-control" id="straatUser">
+                        </div>
+                        <div class="col-md-6 registreer-telefoon pt-4">
+                            <label for="exampleInputPassword1">Telefoon</label>
+                            <input type="text" class="form-control" id="telefoonUser">
+                        </div>
+                        <div class="col-md-6 registreer-wachtwoord pt-4">
+                            <label for="exampleInputPassword1">Wachtwoord</label>
+                            <input type="password" class="form-control" id="wachtwoordUser">
+                        </div>
+                        <div class="col-md-6 registreer-stad pt-4">
+                            <label for="exampleInputPassword1">Stad</label>
+                            <input type="text" class="form-control" id="postcodeUser">
                         </div>
                     </div>
                     <div class="registreer-checkbox pt-4">
