--- a/bestel.html
+++ b/bestel.html
@@ -9,7 +9,6 @@
     <script src="./assets_bootstrap/bootstrap.min.js"></script>
     <link rel="stylesheet" href="./assets_bootstrap/bootstrap.min.css">
     <script defer src="./js/bestel.js"></script>
-    <link rel="stylesheet" href="./Css/login.css">
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <link rel="stylesheet" href="https://use.typekit.net/wpi2keu.css">
     <link rel="stylesheet" href="https://use.typekit.net/wpi2keu.css">
@@ -32,7 +31,7 @@
                             <a class="nav-link px-md-4" href="./bestel.html">Bestel</a>
                         </li>
                         <li class="nav-item align-self-center">
-                            <a class="nav-link px-md-4" href="./overons.html">Over ons<span class="sr-only"></span></a>
+                            <a class="nav-link px-md-4" href="./over_ons.html">Over ons<span class="sr-only"></span></a>
                         </li>
                         <li class="nav-item align-self-center">
                             <a class="nav-link px-md-4" href="./contact.html">Contact</a>
@@ -96,7 +95,7 @@
                     <div class="column1-footer-links d-flex flex-column">
                         <a class="pb-2" href="./index.html">Home</a>
                         <a class="pb-2" href="./product.html">Product</a>
-                        <a class="pb-2" href="./overons.html">Over ons</a>
+                        <a class="pb-2" href="./over_ons.html">Over ons</a>
                         <a href="./contact.html">Contact</a>
                     </div>
                 </div>
