--- a/over_ons.html
+++ b/over_ons.html
@@ -7,8 +7,8 @@
     <script src="./assets_bootstrap/jquery-3.5.1.min.js"></script>
     <script src="./assets_bootstrap/bootstrap.min.js"></script>
     <link rel="stylesheet" href="./assets_bootstrap/bootstrap.min.css">
-    <script defer src="./js/overons.js"></script>
-    <link rel="stylesheet" href="./scss/overons.css">
+    <script defer src="./js/over_ons.js"></script>
+    <link rel="stylesheet" href="./scss/over_ons.css">
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <link rel="stylesheet" href="https://use.typekit.net/wpi2keu.css">
     <link rel="stylesheet" href="https://use.typekit.net/wpi2keu.css">
@@ -31,7 +31,7 @@
                         <a class="nav-link px-md-4" href="./bestel.html">Bestel</a>
                     </li>
                     <li class="nav-item align-self-center">
-                        <a class="nav-link px-md-4" href="./overons.html">Over ons<span class="sr-only"></span></a>
+                        <a class="nav-link px-md-4" href="./over_ons.html">Over ons<span class="sr-only"></span></a>
                     </li>
                     <li class="nav-item align-self-center">
                         <a class="nav-link px-md-4" href="./contact.html">Contact</a>
@@ -82,7 +82,7 @@
                     <h1 class="text-md-left text-center">Kai</h1>
                     <p>"Tis mig allemaal iets"</p>
                     <p>"Wanneer welle broodjes halen? xd""Wanneer welle broodjes halen? xd""Wanneer welle broodjes halen? xd"<br>
-                        "Wanneer welle broodjes halen? xd""<br>
+                       "Wanneer welle broodjes halen? xd""<br>
                     </p>
                 </div>
                 <div class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-end justify-content-center column-picture">
@@ -128,7 +128,7 @@
                 <div class="column1-footer-links d-flex flex-column">
                     <a class="pb-2" href="./index.html">Home</a>
                     <a class="pb-2" href="./product.html">Product</a>
-                    <a class="pb-2" href="./overons.html">Over ons</a>
+                    <a class="pb-2" href="./over_ons.html">Over ons</a>
                     <a href="./contact.html">Contact</a>
                 </div>
             </div>
