--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
                         <a class="nav-link px-md-4" href="./bestel.html">Bestel</a>
                     </li>
                     <li class="nav-item align-self-center">
-                        <a class="nav-link px-md-4" href="./overons.html">Over ons<span class="sr-only"></span></a>
+                        <a class="nav-link px-md-4" href="./over_ons.html">Over ons<span class="sr-only"></span></a>
                     </li>
                     <li class="nav-item align-self-center">
                         <a class="nav-link px-md-4" href="./contact.html">Contact</a>
@@ -59,19 +59,19 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="exampleInputPassword1">Voornaam*</label>
-                                <input type="text" class="form-control" id="exampleInputPassword1">
+                                <input type="text" class="form-control" id="voornaamInput">
                               </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="exampleInputPassword1">Achternaam*</label>
-                                <input type="text" class="form-control" id="exampleInputPassword1">
+                                <input type="text" class="form-control" id="achternaamInput">
                               </div>
                         </div>
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label for="exampleInputPassword1">E-mail*</label>
-                                <input type="text" class="form-control" id="exampleInputPassword1">
+                                <input type="text" class="form-control" id="mailInput">
                               </div>
                         </div>
                         <div class="col-md-12">
@@ -103,7 +103,7 @@
                 <div class="column1-footer-links d-flex flex-column">
                     <a class="pb-2" href="./index.html">Home</a>
                     <a class="pb-2" href="./product.html">Product</a>
-                    <a class="pb-2" href="./overons.html">Over ons</a>
+                    <a class="pb-2" href="./over_ons.html">Over ons</a>
                     <a href="./contact.html">Contact</a>
                 </div>
             </div>
