--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <a class="nav-link px-md-4" href="./bestel.html">Bestel</a>
                     </li>
                     <li class="nav-item align-self-center">
-                        <a class="nav-link px-md-4" href="./overons.html">Over ons<span class="sr-only"></span></a>
+                        <a class="nav-link px-md-4" href="./over_ons.html">Over ons<span class="sr-only"></span></a>
                     </li>
                     <li class="nav-item align-self-center">
                         <a class="nav-link px-md-4" href="./contact.html">Contact</a>
@@ -398,7 +398,7 @@
             </div>
         </main>
         <div class="footer-image">
-            <img class="img-fluid" src="./Images/Group 564.png" alt="">
+            <img class="img-fluid w-100" src="./Images/Group 564.png" alt="">
         </div>
         <!--FOOTER-->
         <footer class="row">
@@ -406,7 +406,7 @@
                 <div class="column1-footer-links d-flex flex-column">
                     <a class="pb-4" href="./index.html">Home</a>
                     <a class="pb-4" href="./product.html">Product</a>
-                    <a class="pb-4" href="./overons.html">Over ons</a>
+                    <a class="pb-4" href="./over_ons.html">Over ons</a>
                     <a href="./contact.html">Contact</a>
                 </div>
             </div>
