--- a/logIn.html
+++ b/logIn.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Css/login.css">
+    <link rel="stylesheet" href="./scss/login.css">
     <script src="./assets_bootstrap/jquery-3.5.1.min.js"></script>
     <script src="./assets_bootstrap/bootstrap.min.js"></script>
     <link rel="stylesheet" href="./assets_bootstrap/bootstrap.min.css">
@@ -16,7 +15,6 @@
     <link rel="stylesheet" href="https://use.typekit.net/wpi2keu.css">
     <title>Login</title>
 </head>
-
 <body>
     <!--Navigatie-->
     <div class="container-fluid fullpage m-0 p-0">
@@ -34,7 +32,7 @@
                         <a class="nav-link px-md-4" href="./bestel.html">Bestel</a>
                     </li>
                     <li class="nav-item align-self-center">
-                        <a class="nav-link px-md-4" href="./overons.html">Over ons<span class="sr-only"></span></a>
+                        <a class="nav-link px-md-4" href="./over_ons.html">Over ons<span class="sr-only"></span></a>
                     </li>
                     <li class="nav-item align-self-center">
                         <a class="nav-link px-md-4" href="./contact.html">Contact</a>
@@ -124,7 +122,7 @@
                 <div class="column1-footer-links d-flex flex-column">
                     <a class="pb-4" href="./index.html">Home</a>
                     <a class="pb-4" href="./product.html">Product</a>
-                    <a class="pb-4" href="./overons.html">Over ons</a>
+                    <a class="pb-4" href="./over_ons.html">Over ons</a>
                     <a href="./contact.html">Contact</a>
                 </div>
             </div>
