--- a/winkelmandje.html
+++ b/winkelmandje.html
@@ -30,7 +30,7 @@
                         <a class="nav-link px-md-4" href="./bestel.html">Bestel</a>
                     </li>
                     <li class="nav-item align-self-center">
-                        <a class="nav-link px-md-4" href="./overons.html">Over ons<span class="sr-only"></span></a>
+                        <a class="nav-link px-md-4" href="./over_ons.html">Over ons<span class="sr-only"></span></a>
                     </li>
                     <li class="nav-item align-self-center">
                         <a class="nav-link px-md-4" href="./contact.html">Contact</a>
@@ -148,7 +148,7 @@
                 <div class="column1-footer-links d-flex flex-column">
                     <a class="pb-2" href="./index.html">Home</a>
                     <a class="pb-2" href="./product.html">Product</a>
-                    <a class="pb-2" href="./overons.html">Over ons</a>
+                    <a class="pb-2" href="./over_ons.html">Over ons</a>
                     <a href="./contact.html">Contact</a>
                 </div>
             </div>
